src-errormsg-validators/E04-DivisionOnIntegers/Plinth.err

/Users/sho/io/plinth-plutarch-paper-code/src-errormsg-validators/E04-DivisionOnIntegers/Plinth.hs:155:66: error: [GHC-88464]
    Variable not in scope: (/) :: Integer -> Integer -> Integer
    |
155 |   | otherwise = (totalAllocation * (timestamp - startTimestamp)) / duration
    |                                                                  ^
